#2368 Some simplification, renaming, and documentation improvements.